(fix) Hide scrollbars

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -47,6 +47,7 @@ body {
   font-size: 20px;
   color: $text-color;
   font-family: 'Raleway', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow: hidden;
 }
 
 b, strong {
